loxrs_interpreter/src/lox/interpreter/test/e2e/fail/bad_redeclare.lox
fun bad() {
  var a;
  var a;
}
